# srs-rs-rs

./: .gitignore  Cargo.toml  LICENCE-APACHE  LICENSE  LICENSE-MIT  README.md  profiling.md
benches/: micro.rs  mphf_bench.rs
examples/: minimal.rs
src/: bin.rs  cpp_bindings.rs  hasher.rs  lib.rs  mphf.rs
