[package]
name = "recsplit"
authors = ["Jonatan Ziegler"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "RecSplit minimal perfect hash function"
repository = "https://github.com/worldofjoni/RecSplit"
keywords = ["hashing", "mphf", "perfect-hash", "perfect"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
bitvec = "1.0.1"
env_logger = "0.11.3"
fxhash = "0.2.1"
indicatif = { version = "0.17.8", optional = true }
log = "0.4.21"
rand = { version = "0.8.5", features = ["min_const_gen"] }
rayon = "1.10.0"
static_assertions = "1.1.0"
wyhash2 = "0.2.1"
xxhash-rust = { version = "0.8.12", features = ["xxh64"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
float-cmp = "0.9.0"
gnuplot = "0.0.43"
rand = "0.8.5"
stacker = "0.1.15"

[features]
debug_output = []
progress = ["dep:indicatif"]


[[bench]]
name = "rec_bench"
harness = false

[[bench]]
name = "mvp_bench"
harness = false

[[bench]]
name = "mphf_bench"
harness = false

[[bench]]
name = "micro"
harness = false

# [[bin]]
# name = "testbin"
# path = "src/bin.rs"

[profile.release]
debug = true # for flamegraph
lto = "thin"
