[package]
name = "srs-rs-rs"
authors = ["Jonatan Ziegler"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Minimal Perfect Hash Function using Symbiotic Random Search"
repository = "https://github.com/worldofjoni/RecSplit"
keywords = [
    "mphf",
    "hashing",
    "perfect-hash",
    "perfect",
    "brute force",
    "random seach",
    "srs",
    "recsplit",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
wyhash2 = "0.2.1"
partition = "0.1.2"
cxx = { version = "1.0.128", optional = true }
indicatif = { version = "0.17.8", optional = true }
# static_assertions = "1.1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
gnuplot = "0.0.43"
rand = { version = "0.8.5", features = ["min_const_gen"] }
rayon = "1.10.0"
float-cmp = "0.10.0"


# other hashers
fxhash = "0.2.1"
xxhash-rust = { version = "0.8.12", features = ["xxh64"] }
wyhash = "0.5.0"
wyhash-final4 = "0.2.1"
ahash = "0.8.11"


[features]
debug_output = []
progress = ["dep:indicatif"]
cpp_binds = ["dep:cxx"]

[lib]
crate-type = ["lib", "staticlib"]

[[bench]]
name = "mphf_bench"
harness = false

[[bench]]
name = "micro"
harness = false

# [[bin]]
# name = "testbin"
# path = "src/bin.rs"

[profile.release]
# lto = "thin" # no longer necessary/beteficial

[profile.profile]
inherits = "release"
debug = true         # for flamegraph
